--- a/aulas/Aula 3 - Comentarios, while e listas.ipynb
+++ b/aulas/Aula 3 - Comentarios, while e listas.ipynb
@@ -633,66 +633,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tentativa50\n",
-      "Menor\n",
-      "tentativa75\n",
-      "Menor\n",
-      "tentativa25\n",
-      "Menor\n",
-      "tentativa12\n",
-      "Maior\n",
-      "tentativa20\n",
-      "Maior\n",
-      "tentativa22\n",
-      "Menor\n",
-      "tentativa21\n",
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
-    "numero = random.randint(0, 100)\n",
-    "\n",
-    "tentativa = int(input('tentativa'))\n",
-    "count = 1\n",
-    "while tentativa != numero:\n",
-    "    if tentativa < numero:\n",
-    "        print('Maior')\n",
-    "    else: \n",
-    "        print('Menor')\n",
-    "\n",
-    "    tentativa = int(input('tentativa'))\n",
-    "    count += 1\n",
-    "\n",
-    "print(count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "28"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "count"
+    "numero = random.randint(0, 100)\n"
    ]
   },
   {
