--- a/aulas/Aula 3 - Comentarios, while e listas.ipynb
+++ b/aulas/Aula 3 - Comentarios, while e listas.ipynb
@@ -586,11 +586,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite uma nota:-1\n",
+      "Digite uma nota:11\n",
+      "Digite uma nota:10\n"
+     ]
+    }
+   ],
+   "source": [
+    "nota = float(input('Digite uma nota:'))\n",
+    "while nota < 0 or nota > 10:\n",
+    "    nota = float(input('Digite uma nota:'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Diga Olá\n",
     "Faça um programa que imprime 3 vezes `Olá!`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá!\n",
+      "Olá!\n",
+      "Olá!\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while i < 3:\n",
+    "    print('Olá!')\n",
+    "    i += 1"
    ]
   },
   {
@@ -608,6 +651,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá!Olá\n",
+      "Até logo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Olá!')\n",
+    "resp = input()\n",
+    "while resp != 'Olá':\n",
+    "    print('Olá!')\n",
+    "    resp = input()\n",
+    "print('Até logo')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -616,11 +682,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite o numero: 10\n",
+      "Digite o numero: 10\n",
+      "Digite o numero: 20\n",
+      "Media: 13.333333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "total = 0 \n",
+    "while i < 3:\n",
+    "    total += float(input('Digite o numero: '))\n",
+    "    i += 1\n",
+    "print('Media:', total/3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Média 2\n",
     "Faça um programa que imprima a média de `n` numeros, sendo `n` e os números informado pelo usuário."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quantos numeros serão? 3\n",
+      "Digite o numero: 10\n",
+      "Digite o numero: 10\n",
+      "Digite o numero: 20\n",
+      "Media: 13.333333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_of_items = int(input('Quantos numeros serão? '))\n",
+    "\n",
+    "i = 0\n",
+    "total = 0 \n",
+    "while i < number_of_items:\n",
+    "    total += float(input('Digite o numero: '))\n",
+    "    i += 1\n",
+    "print('Media:', total/number_of_items)"
    ]
   },
   {
@@ -633,12 +752,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adivinhe um número de 0 a 100\n",
+      "Tentativa: 50\n",
+      "Maior!\n",
+      "Tentativa:25\n",
+      "Maior!\n",
+      "Tentativa:75\n",
+      "Menor!\n",
+      "Tentativa:65\n",
+      "Maior!\n",
+      "Tentativa:70\n",
+      "Maior!\n",
+      "Tentativa:12\n",
+      "Maior!\n",
+      "Tentativa:72\n",
+      "Maior!\n",
+      "Tentativa:73\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
-    "numero = random.randint(0, 100)\n"
+    "numero = random.randint(0, 100)\n",
+    "\n",
+    "print('Adivinhe um número de 0 a 100')\n",
+    "tentativa = int(input('Tentativa: '))\n",
+    "count = 1\n",
+    "while tentativa != numero:\n",
+    "    if tentativa < numero:\n",
+    "        print('Maior!')\n",
+    "    else: \n",
+    "        print('Menor!')\n",
+    "\n",
+    "    tentativa = int(input('Tentativa:'))\n",
+    "    count += 1\n",
+    "\n",
+    "print(count)"
    ]
   },
   {
@@ -659,382 +816,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Listas\n",
-    "\n",
-    "Imagine que você quer armazenar várias variáveis relacionadas, como, por exemplo, todas suas notas em provas.\n",
-    "\n",
-    "Se houver muitas notas, não é muito prático criar uma variável para cada uma. Seria muito mais conveniente armazenar todas as notas em uma **lista**, não é mesmo? \n",
-    "\n",
-    "Em python, temos uma estrutura de dados que é exatamente isso: uma lista! Listas são indicadas por colchete []\n",
-    "\n",
-    "Uma lista nada mais é que um **conjunto de objetos**, que podem ser de quaisquer tipo"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lista de números (int e float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lista de strings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lista de números e strings\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lista de listas\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Muitas vezes, queremos **acessar elementos individuais** da lista. \n",
-    "\n",
-    "Para fazer isso, devemos indicar qual é o **índice** respectivo ao elemento, isto é, qual é a **posição** do elemento dentro da lista\n",
-    "\n",
-    "Para acessar o elemento na **posição i** da lista \"minha_lista\", fazemos:\n",
-    "\n",
-    "```python\n",
-    "minha_lista[i]\n",
-    "```\n",
-    "\n",
-    "__MUITO IMPORTANTE: a numeração de índice começa em zero!__\n",
-    "\n",
-    "Ou seja:\n",
-    "\n",
-    "- O primeiro elemento tem índice 0: ```minha_lista[0]``` ,\n",
-    "- O segundo tem índice 1: ```minha_lista[1]```,\n",
-    "\n",
-    "E assim por diante!\n",
-    "\n",
-    "Também podemos acessar os últimos elementos, usando índices negativos:\n",
-    "\n",
-    "- O último elemento tem índice -1: ```minha_lista[-1]```,\n",
-    "- O penúltimo tem índice -2: ```minha_lista[-2]```,\n",
-    "\n",
-    "E assim por diante!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Também podemos **acessar pedaços da lista**, indicando o intervalo de índices que queremos, separados por \":\",  **com intervalo superior aberto**:\n",
-    "\n",
-    "- ```minha_lista[1:3]```: seleciona os elementos de indice 1 até indice 2\n",
-    "- ```minha_lista[:4]```: seleciona do primeiro elemento até o de índice 3\n",
-    "- ```minha_lista[3:]```: seleciona do elemento de índice 3 até o final\n",
-    "- ```minha_lista[:]```: seleciona a lista inteira\n",
-    "\n",
-    "Este conceito é chamado de \"slicing\", pois você está pegando \"fatias\" da lista!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Podemos também especificar em passo para os elementos que pegamos. Por exemplo:\n",
-    "- `minha_lista[1:6:2]`: seleciona os elementos do indice 1 ao 5 pulando de dois em dois. Note que ele comeca a selecionar do 1 e vai pulando de dois em dois até o indice ser maior ou igual a 6. Ele não considera essa ultima posição na seleção \n",
-    "\n",
-    "_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Podemos também fazer algumas **operações com listas**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Soma de listas: ao **somar listas**, os elementos são **concatenados**, na ordem dada, para formar uma lista maior:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ao **multiplicar listas por um inteiro**, os elementos são repetidos, na ordem que aparecem:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Se quisermos somar os elementos de duas listas, ou multiplicá-los por algum número, temos que usar um **laço**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Listas também podem ser comparadas com == e !=. Listas serão iguais de tiverem todos os elementos iguais. \n",
-    "\n",
-    "Obs: Note que nesse caso as operações de igualdade entre os valores em posições correspondente nas listas devem existir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Listas também podem ser comparadas com > >= < <=, contanto que as posições equivalentes nas listas possam ser comparadas com o operador em questão. Da mesma forma que em strings, a ordem das listas é definida pela ordem do primeiro elemento diferente"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exercicio\n",
-    "Dada a lista a seguir:\n",
-    "```python\n",
-    "lista = [5, 6, 7, 8, 9]\n",
-    "```\n",
-    "\n",
-    "Obtenha usando indexação e slicing somente seguintes valores:\n",
-    "- o número 8 da lista\n",
-    "- os números pares\n",
-    "- uma lista com os numeros 8 e 9 \n",
-    "- o último elemento da lista\n",
-    "- a mesma lista em ordem inversa"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Manipulação de listas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### lista[idx] = el\n",
-    "Modifica o valor numa posição na lista"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### list(obj)\n",
-    "Converte objeto em lista"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### .append(el)\n",
-    "Adiciona um elemento ao fim da lista"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### el in lista (Operador in)\n",
-    "Verifica se o elemento está na lista "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### sorted(lista)\n",
-    "Ordena a lista\n",
-    "\n",
-    "**OBS: essa função só funciona para listas com dados que tenham o > e < definidos entre si!**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### .sort()\n",
-    "Ordena a lista"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### .index(el)\n",
-    "Primeira aparição do elemento na lista"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### max(lista)\n",
-    "Maior valor na lista"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### min(lista)\n",
-    "Menor valor na lista"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### len(lista)\n",
-    "Tamanho da lista"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### sum(lista)\n",
-    "Soma dos elementos da lista de numeros"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercicio\n",
-    "Execute os seguintes passos:\n",
-    "1. Crie uma lista com as letras de 'a' a 'z' em ordem alfabetica\n",
-    "2. Insira o valor 'bola' na posição 1 da sua lista\n",
-    "3. Imprima o valor na posição 12\n",
-    "4. Substitua o valor na posição 12 pela string '12'\n",
-    "5. Selecione os valores da posição 1 a posição 20, com passo 5.\n",
-    "6. Selecione os valores da posição 0 a posição 20, com passo 2.\n",
-    "7. Junte os resultados dos passos 5 e 6 em uma unica lista\n",
-    "8. Ordene a lista do passo 7\n",
-    "9. Inverta a ordem da lista do passo 8\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'abcdefghijklmnopqrstuvwxyz'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite a distancia percorrida hoje:500\n",
+      "Digite a distancia percorrida hoje:400\n",
+      "Digite a distancia percorrida hoje:300\n",
+      "Total de dias: 3\n",
+      "Distancia média por dia: 400.0\n"
+     ]
     }
    ],
    "source": [
-    "import string\n",
-    "string.ascii_lowercase"
+    "total = 0\n",
+    "dias = 0\n",
+    "while total <= 1000:\n",
+    "    total += float(input('Digite a distancia percorrida hoje:'))\n",
+    "    dias += 1\n",
+    "    \n",
+    "print('Total de dias:', dias)\n",
+    "print('Distancia média por dia:', total/dias)"
    ]
   }
  ],
