--- a/aulas/Aula 4 - listas e loop for.ipynb
+++ b/aulas/Aula 4 - listas e loop for.ipynb
@@ -1400,18 +1400,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite o conceito ou \"sair\" para sair: A\n",
+      "Digite o conceito ou \"sair\" para sair: F\n",
+      "Digite o conceito ou \"sair\" para sair: sair\n",
+      "Media: 5.0\n",
+      "Conceito A apareceu 1 vezes\n",
+      "Conceito B apareceu 0 vezes\n",
+      "Conceito C apareceu 0 vezes\n",
+      "Conceito D apareceu 0 vezes\n",
+      "Conceito F apareceu 1 vezes\n"
+     ]
+    }
+   ],
    "source": [
     "# Parte 1 - Leitura das entradas\n",
+    "possiveis_conceitos = list('ABCDF')\n",
+    "\n",
+    "conceitos = []\n",
+    "conceito = ''\n",
+    "while conceito != 'sair':\n",
+    "    conceito = input('Digite o conceito ou \"sair\" para sair: ')\n",
+    "    while conceito not in possiveis_conceitos + ['sair']:\n",
+    "        print('Conceito inválido!')\n",
+    "        conceito = input('Digite o conceito ou \"sair\" para sair: ')\n",
+    "    conceitos.append(conceito)\n",
+    "conceitos = conceitos[:-1] # remove o 'sair' da lista\n",
     "\n",
     "# fim da parte 1\n",
     "\n",
-    "conceitos = [...] # lista com os conceitos\n",
+    "# conceitos = [...] # lista com os conceitos\n",
     "\n",
     "# Parte 2 - Processamento\n",
     "\n",
+    "notas = []\n",
+    "for conceito in conceitos:\n",
+    "    if conceito == 'A':\n",
+    "        nota = 10\n",
+    "    elif conceito == 'B':\n",
+    "        nota = 8.5\n",
+    "    elif conceito == 'C':\n",
+    "        nota = 7.5\n",
+    "    elif conceito == 'D':\n",
+    "        nota = 6.5\n",
+    "    else:\n",
+    "        nota = 0\n",
+    "    notas.append(nota)\n",
+    "\n",
+    "print('Media:', sum(notas)/len(notas))\n",
+    "for conceito in possiveis_conceitos:\n",
+    "    n = conceitos.count(conceito)\n",
+    "    print('Conceito', conceito, 'apareceu', n, 'vezes')\n",
     "# fim da parte 2"
    ]
   },
@@ -1431,29 +1476,37 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.18460314358165986"
-      ]
-     },
-     "execution_count": 210,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proporção: 0.785378\n",
+      "Area: 3.141512\n",
+      "Diff: -8.065358979303383e-05\n"
+     ]
     }
    ],
    "source": [
     "import random\n",
-    "random.random()"
+    "import math\n",
+    "inside = 0\n",
+    "total = 1_000_000\n",
+    "\n",
+    "for i in range(total):\n",
+    "    x = random.random()\n",
+    "    y = random.random()\n",
+    "    if x**2 + y**2 < 1:\n",
+    "        inside += 1\n",
+    "    \n",
+    "prop = inside/total\n",
+    "area = prop * 4\n",
+    "print('Proporção:', prop)\n",
+    "print('Area:', area)\n",
+    "print('Diff:', area - math.pi)"
    ]
   },
   {
