muda nome da aula 3

--- a/aulas/Aula 3 - Comentarios e while .ipynb
+++ b/aulas/Aula 3 - Comentarios e while .ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aula 3 - comentarios, while e listas"
+    "# Aula 3 - comentarios e while"
    ]
   },
   {
